# lanelet2anchors

./: .gitignore  Dockerfile  README.md  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: pypi_publish.yml  release.yaml
docs/: index.md
docs/api/: AnchorGenerator.md
docs/api/entities/: anchor.md  lanelet_anchor_matches.md  lanelet_match_prob.md  lanelet_matching_config.md  lanelet_matching_prob_config.md  vehicle.md  vehicle_ahead.md  vehicle_pose.md
docs/api/tools/: anchor2linestring.md  anchor2polygon.md  find_vehicle_ahead.md  visualize.md
docs/notebooks/: example.ipynb  example_nusc.ipynb
src/lanelet2anchors/: __init__.py  anchor_generator.py
src/lanelet2anchors/anchor_generation/: __init__.py  anchor.py  create_anchors_from_lanelet.py  discover_anchors.py  sort_anchors.py
src/lanelet2anchors/anchor_tools/: anchor2linestring.py  anchor2polygon.py  interpolate_lanelet.py  lanelet_matching.py  nusc.py  plot_car.py  vehicle_ahead.py  visualize.py
